Search layout adjustments

--- a/styles/article.module.css
+++ b/styles/article.module.css
@@ -47,3 +47,10 @@
 #article h6 {
 	font-weight: 400;
 }
+
+@media screen and (max-width: 640px) {
+	#article h1 {
+		font-size: 2rem;
+		line-height: 1;
+	}
+}
